suzettes link and git hub link

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						<ul>
 							<li><span class="bada55">UI/UX</span> is usually thought of concerning the frontend / end user</li>
 							<li>Often the UI/UX of the <span class="bada55">client</span> is forgotten</li>
-							<li><span class="bada55">Suzette Frank</span> <small class="bada55">of (mt)</small> gave a great talk on 'Work Statements' / Business Requirements at WordCamp Boston 2013 - <span class="bada55">Back End UX</span> should also be considered during this process.
+							<li><span class="bada55"><a href="https://speakerdeck.com/suzettefranck/dont-do-anything-without-a-statement-of-work" target="_blank">Suzette Frank</a></span> <small class="bada55">of (mt)</small> gave a great talk on 'Work Statements' / Business Requirements at WordCamp Boston 2013 - <span class="bada55">Back End UX</span> should also be considered during this process.
 						</ul>
 					</section>
 
@@ -339,8 +339,9 @@
 		(function(){
 			var $ = jQuery;
 			var footer = '<p class="clear test">\
-			<small>@add_action_dan</small>\
-			<small>@blueearth</small>\
+			<small class="bada55">https://github.com/dannyb195/wcphx-stop-building-themes</small><br />\
+			<small class="bada55">@add_action_dan</small><br />\
+			<small class="bada55">@blueearth</small>\
 		</p>';
 		$('section').append(footer);
 	})();
