working on slides morning of talk

--- a/index.html
+++ b/index.html
@@ -91,16 +91,24 @@
 								</ul>
 							</li>
 							<li>Both are crucial to the creative process and should be involved from the <span class="bada55">beginning</span> and <span class="bada55">throughout</span> the project</li>
-							<li>if (<span class="bada55">$design</span> === 'Telling the Clients Story') { <span class="bada55">$development</span> = 'is the medium on which that story is told'; }</li>
 						</ul>
 					</section>
 
 					<section>
-						<h2>Client First UI/UX</h2>
-						<ul>
-							<li><span class="bada55">UI/UX</span> is usually thought of concerning the frontend / end user</li>
-							<li>Often the UI/UX of the <span class="bada55">client</span> is forgotten</li>
-							<li><span class="bada55"><a href="https://speakerdeck.com/suzettefranck/dont-do-anything-without-a-statement-of-work" target="_blank">Suzette Frank</a></span> <small class="bada55">of (mt)</small> gave a great talk on 'Work Statements' / Business Requirements at WordCamp Boston 2013 - <span class="bada55">Back End UX</span> should also be considered during this process.
+						if (<span class="bada55">$design</span> == 'Telling the Clients Story') {
+						<br /><span class="bada55">$development</span> = 'is the medium on which that story is told';<br />
+					}
+				</section>
+
+				<section>
+					<h2>Client First UI/UX</h2>
+					<ul>
+						<li><span class="bada55">UI/UX</span> is usually thought of concerning the frontend / end user</li>
+						<li>Often the UI/UX of the <span class="bada55">client</span> and <span class="bada55">content management</span> is forgotten</li>
+						<li><span class="bada55"><a href="https://speakerdeck.com/suzettefranck/dont-do-anything-without-a-statement-of-work" target="_blank">Suzette Frank</a></span> <small class="bada55">of (mt)</small> gave a great talk on 'Work Statements' / Business Requirements at WordCamp Boston 2013 - <span class="bada55">Back End UX</span> should also be considered during this process.
+							<li>
+								<img src="img/common-sliders.png" />
+							</li>
 						</ul>
 					</section>
 
@@ -127,7 +135,8 @@
 						<h2>Ok, So What's a Front End Wordpress Dev???</h2>
 						<ul>
 							<li>Can <small><span class="bada55">(at the very minimum)</span></small> have conversations about the previous items</li>
-							<li>Very comfortble browsing the <span class="bada55">codex</span></li>
+							<li>Very comfortble browsing the <span class="bada55">codex <small class="bada55">(or upcoming documentation)</small></span></li>
+							<li>Some knowledge of <span class="bada55">server environments</span></li>
 							<li><small><span class="bada55">At the beginning</span></small> Does not need to be an expert PHP dev</li>
 							<li><small><span class="bada55">At the beginning</span></small> Or an expert Javascript dev</li>
 							<li><span class="bada55">Does</span> need to be an 'expert' concerning WordPress
@@ -150,8 +159,8 @@
 									<li>With this the client can clearly see what content is entered where</li>
 								</ul>
 							</li>
-							<li>Even rediculously long CPT Labels CAN be a good thing
-							<img src="img/manuals-warranties-cropped.jpg" />
+							<li>Even rediculously long CPT Labels <span class="bada55">CAN</span> be a helpful.
+								<img src="img/manuals-warranties-cropped.jpg" />
 							</li>
 						</ul>
 					</section>
@@ -228,45 +237,47 @@
 						<h2>General Guide Lines</h2>
 						<ul>
 							<li><span class="bada55">Client-first</span> thinking is a must when it comes to solving problems
-							<li>Don't use <span class="bada55">short codes</span> unless necessary (too typo prone)</li>
-							<li>Never include <span class="bada55">HTML</span> in a client's <span class="bada55">work flow</span> (too typo prone / technical)</li>
-							<li>appropriate use of <span class="bada55">CPTs</span> and <span class="bada55">meta boxes</span>
-								<ul>
-									<li>naturally divide content into <span class="bada55">CPTs</span> and <span class="bada55">meta boxes</span> - input fields - select boxes - media manager</li>
+								<li>Don't use <span class="bada55">short codes</span> unless necessary (too typo prone)</li>
+								<li>Never include <span class="bada55">HTML</span> in a client's <span class="bada55">work flow</span> (too typo prone / technical)</li>
+								<li>appropriate use of <span class="bada55">CPTs</span> and <span class="bada55">meta boxes</span>
+									<ul>
+										<li>naturally divide content into <span class="bada55">CPTs</span> and <span class="bada55">meta boxes</span> - input fields - select boxes - media manager</li>
+									</ul>
+								</li>
+							</ul>
+						</section>
+
+						<section>
+							<h2>Wrapping up</h2>
+							<ul>
+								<li>If your client looks like this after training <span class="bada55">#YourDoingItWrong</span>
+									<br /><img src="img/confused-client.jpg" style="height: 200px;" /></li>
 								</ul>
-							</li>
-						</ul>
-					</section>
+							</section>
 
-					<section>
-						<h2>Wrapping up</h2>
-						<ul>
-							<li>If your client looks like this after training you've done something wrong</li>
-							<li><img src="img/confused-client.jpg" style="height: 200px;" /></li>
-						</ul>
-					</section>
+							<section>
+								<h2>Wrapping up Cont...</h2>
+								<ul>
+									<li>If you did it <span class="bada55">right</span>, your client will look like this
+										<br />
+										<img src="img/happy-dogs.jpg" style="height: 200px;" />
+									</li>
+								</ul>
+							</section>
 
-					<section>
-						<h2>Wrapping up Cont...</h2>
-						<ul>
-							<li>If you did it <span class="bada55">right</span>, your client will look like this</li>
-							<li><img src="img/happy-dogs.jpg" style="height: 200px;" /></li>
-						</ul>
-					</section>
+							<section>
+								<h2>That's It!</h2>
+								<h3 class="bada55">Questions?</h3>
+							</section>
 
-					<section>
-						<h2>That's It!</h2>
-						<h3 class="bada55">Questions?</h3>
-					</section>
+						</div>
 
-				</div>
+					</div>
 
-			</div>
+					<script src="lib/js/head.min.js"></script>
+					<script src="js/reveal.min.js"></script>
 
-			<script src="lib/js/head.min.js"></script>
-			<script src="js/reveal.min.js"></script>
-
-			<script>
+					<script>
 
 			// Full list of configuration options available here:
 			// https://github.com/hakimel/reveal.js#configuration
