--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 					<section>
 						<h2>What is a Front End Dev?</h2>
-						<small>traditionally has <span class="bada55">expert</span> knowledge in...</small>
+						<small>Traditionally has <span class="bada55">expert</span> knowledge in...</small>
 						<ul>
 							<li>CSS3</li>
 							<li>Javascript / jQuery
@@ -125,7 +125,7 @@
 							<li>HTML5 Awesomeness</li>
 							<li>Understands page load time issues
 								<ul>
-									<li><small><span class="bada55">...and how to complain about 200 milliseconds...talk with Josh Broton some time (@joshbroton)</span></small></li>
+									<li><small><span class="bada55">...and how to complain about 200 milliseconds...talk with Josh Broton sometime (@joshbroton)</span></small></li>
 								</ul>
 							</li>		
 						</ul>
@@ -159,7 +159,7 @@
 									<li>With this the client can clearly see what content is entered where</li>
 								</ul>
 							</li>
-							<li>Even rediculously long CPT Labels <span class="bada55">CAN</span> be a helpful.
+							<li>Even ridiculously long CPT Labels <span class="bada55">CAN</span> be a helpful.
 								<img src="img/manuals-warranties-cropped.jpg" />
 							</li>
 						</ul>
@@ -173,10 +173,10 @@
 					</section>
 
 					<section>
-						<h2>The Prefect Example</h2>
+						<h2>The Perfect Example</h2>
 						<ul>
 							<li class=" visible"><strong>A List of Team Members or Employees</strong></li>
-							<li>Almost all organization have something similar</li>
+							<li>Almost all organizations have something similar</li>
 							<li><span class="bada55">Functionality</span> can differ with the same information</li>
 							<li>Clear example of <span class="bada55">meta boxes</span></li>
 						</ul>
@@ -234,7 +234,7 @@
 					</section>
 
 					<section>
-						<h2>General Guide Lines</h2>
+						<h2>General Guidelines</h2>
 						<ul>
 							<li><span class="bada55">Client-first</span> thinking is a must when it comes to solving problems
 								<li>Don't use <span class="bada55">short codes</span> unless necessary (too typo prone)</li>
@@ -250,7 +250,7 @@
 						<section>
 							<h2>Wrapping up</h2>
 							<ul>
-								<li>If your client looks like this after training <span class="bada55">#YourDoingItWrong</span>
+								<li>If your client looks like this after training <span class="bada55">#YoureDoingItWrong</span>
 									<br /><img src="img/confused-client.jpg" style="height: 200px;" /></li>
 								</ul>
 							</section>
