Add link to Custom Meta Boxes and Fields
:smile:

--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
 								</ul>
 							</li>
 						</ul>
+						<em><a href="https://github.com/WebDevStudios/Custom-Metaboxes-and-Fields-for-WordPress">Custom Meta Boxes and Fields is an easy way to add powerful custom fields quickly with code.</a></em>
 					</section>
 
 					<section>
